--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "skeleton"
   ],
   "dependencies": {
+    "babel-preset-env": "^1.6.1",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "express": "^4.14.0",
+    "morgan": "^1.9.0",
+    "nodemon": "^1.12.1",
+    "path": "^0.12.7",
     "pg": "^6.1.0",
     "pg-native": "^1.10.0",
     "react": "^15.3.2",
@@ -35,7 +39,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "volleyball": "^1.4.1",
     "webpack": "^3.5.5"
   }
 }
