--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "express": "^4.14.0",
-    "morgan": "^1.9.0",
     "nodemon": "^1.12.1",
     "path": "^0.12.7",
     "pg": "^6.1.0",
@@ -31,7 +30,8 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
-    "sequelize": "^4.7.4"
+    "sequelize": "^4.7.4",
+    "volleyball": "^1.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
