--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "express": "^4.14.0",
+    "morgan": "^1.9.0",
     "nodemon": "^1.12.1",
     "path": "^0.12.7",
     "pg": "^6.1.0",
