--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "pg-native": "^1.10.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-entypo": "^1.3.0",
     "react-redux": "^5.0.6",
+    "react-responsive-carousel": "^3.1.28",
     "react-router-dom": "^4.2.2",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
@@ -42,6 +44,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
     "webpack": "^3.5.5"
   }
 }
